--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: node_js
 node_js: "6.1"
 script: npm run-script build
+before_install: npm cache clean
 after_success: |
   [ $TRAVIS_BRANCH = master ] &&
   bash deploy.sh
