--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,29 @@
+sudo: required
 language: node_js
 node_js: "6.1"
-script: npm run-script build
-before_install: npm cache clean
+
+apt:
+  sources:
+    - google-chrome
+  packages:
+    - google-chrome-stable
+    - google-chrome-beta
+
+before_install:
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+
+before_script:
+  - npm install -g angular-cli
+  - npm install -g karma
+  - npm install
+  - ng build
+
 after_success: |
   [ $TRAVIS_BRANCH = master ] &&
   bash deploy.sh
+
 env:
   global:
     - secure: >-
