--- a/package.json
+++ b/package.json
@@ -13,28 +13,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.2.1",
-    "@angular/compiler": "2.2.1",
-    "@angular/core": "2.2.1",
-    "@angular/forms": "2.2.1",
-    "@angular/http": "2.2.1",
-    "@angular/material": "^2.0.0-alpha.11",
-    "@angular/platform-browser": "2.2.1",
-    "@angular/platform-browser-dynamic": "2.2.1",
-    "@angular/router": "3.2.1",
+    "@angular/common": "2.4.1",
+    "@angular/compiler": "2.4.1",
+    "@angular/core": "^2.4.1",
+    "@angular/forms": "2.4.1",
+    "@angular/http": "2.4.1",
+    "@angular/material": "^2.0.0-beta.1",
+    "@angular/platform-browser": "2.4.1",
+    "@angular/platform-browser-dynamic": "2.4.1",
+    "@angular/router": "3.4.1",
     "core-js": "^2.4.1",
     "ng2-translate": "^4.0.1",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "5.0.1",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "2.2.1",
-    "@types/hammerjs": "^2.0.33",
+    "@angular/compiler-cli": "2.4.1",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.24",
-    "codelyzer": "~1.0.0-beta.3",
+    "angular-cli": "^1.0.0-beta.24",
+    "codelyzer": "2.0.0-beta.4",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
@@ -45,7 +44,7 @@
     "protractor": "4.0.9",
     "travis-encrypt": "^2.1.1",
     "ts-node": "1.2.1",
-    "tslint": "3.13.0",
+    "tslint": "4.0.0",
     "typescript": "~2.0.3",
     "webdriver-manager": "10.2.5"
   }
