--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "@angular/platform-browser": "2.4.1",
     "@angular/platform-browser-dynamic": "2.4.1",
     "@angular/router": "3.4.1",
+    "hammerjs": "2.0.8",
     "core-js": "^2.4.1",
     "ng2-translate": "^4.0.1",
     "rxjs": "5.0.1",
-    "ts-helpers": "^1.1.1",
+    "ts-helpers": "^1.1.2",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
@@ -43,8 +44,8 @@
     "karma-remap-istanbul": "^0.2.1",
     "protractor": "4.0.9",
     "travis-encrypt": "^2.1.1",
-    "ts-node": "1.2.1",
-    "tslint": "4.0.0",
+    "ts-node": "1.7.3",
+    "tslint": "4.2.0",
     "typescript": "~2.0.3",
     "webdriver-manager": "10.2.5"
   }
