--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 sudo: required
 language: node_js
-node_js: "6.1"
+node_js: "6.1.x"
 
 apt:
   sources:
@@ -15,7 +15,7 @@ before_install:
   - sh -e /etc/init.d/xvfb start
 
 before_script:
-  - npm install -g angular-cli
+  - npm install -g angular-cli@latest
   - npm install -g karma
   - npm install
   - ng build
