--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 sudo: required
 language: node_js
-node_js: "node"
+node_js: "7.0.3"
 
 apt:
   sources:
@@ -10,6 +10,7 @@ apt:
     - google-chrome-beta
 
 before_install:
+  - if [[ 'npm -v' == 3* ]]; then npm i -g npm@4; fi
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
