--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ apt:
 
 before_install:
   - if [[ 'npm -v' == 3* ]]; then npm i -g npm@4; fi
+  - npm --version
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
