--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "ng serve",
     "lint": "tslint \"src/**/*.ts\"",
-    "test": "ng test",
+    "test": "ng test --watch false",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
     "build": "ng build --target production --base-href \"/GurpsyMcGurpsFace/\""
