--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,11 @@ before_install:
  - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
  - sudo dpkg -i google-chrome*.deb
 
+script:
+  - npm lint
+  - npm test
+  - npm build
+
 after_success: |
   [ $TRAVIS_BRANCH = master ] &&
   bash deploy.sh
