--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test --watch false",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
-    "build": "ng build --target production"
+    "build": "ng build --target production --base-href \"/GurpsyMcGurpsFace/\""
   },
   "private": true,
   "dependencies": {
