--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   },
   "private": true,
   "dependencies": {
-    "hammerjs": "2.0.8",
     "@angular/common": "2.4.1",
     "@angular/compiler": "2.4.1",
     "@angular/core": "^2.4.1",
@@ -23,7 +22,9 @@
     "@angular/platform-browser": "2.4.1",
     "@angular/platform-browser-dynamic": "2.4.1",
     "@angular/router": "3.4.1",
+    "@types/hammerjs": "^2.0.34",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "ng2-translate": "^4.0.1",
     "rxjs": "5.0.1",
     "ts-helpers": "^1.1.2",
