--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.4.1",
-    "@angular/compiler": "2.4.1",
+    "@angular/common": "^2.4.1",
+    "@angular/compiler": "^2.4.1",
     "@angular/core": "^2.4.1",
-    "@angular/forms": "2.4.1",
-    "@angular/http": "2.4.1",
+    "@angular/flex-layout": "^2.0.0-beta.1",
+    "@angular/forms": "^2.4.1",
+    "@angular/http": "^2.4.1",
     "@angular/material": "^2.0.0-beta.1",
-    "@angular/platform-browser": "2.4.1",
-    "@angular/platform-browser-dynamic": "2.4.1",
-    "@angular/router": "3.4.1",
+    "@angular/platform-browser": "^2.4.1",
+    "@angular/platform-browser-dynamic": "^2.4.1",
+    "@angular/router": "^3.4.1",
     "@types/hammerjs": "^2.0.34",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
