--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "ng2-translate": "^4.0.1",
     "rxjs": "5.0.1",
     "ts-helpers": "^1.1.2",
-    "zone.js": "^0.7.2",
-    "ng2-file-drop": "^0.2.0"
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
     "@angular/compiler-cli": "2.4.1",
