--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/hammerjs": "^2.0.34",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "json-typescript-mapper": "^1.0.5",
     "ng2-translate": "^4.0.1",
     "rxjs": "5.0.1",
     "ts-helpers": "^1.1.2",
