--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "ts-node": "1.7.3",
     "tslint": "4.2.0",
     "typescript": "~2.0.3",
-    "webdriver-manager": "10.2.5"
+    "webdriver-manager": "10.2.5",
+    "webpack": "^2.2.1"
   }
 }
