--- a/package.json
+++ b/package.json
@@ -13,44 +13,44 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.4.1",
-    "@angular/compiler": "^2.4.1",
-    "@angular/core": "^2.4.1",
-    "@angular/flex-layout": "^2.0.0-beta.1",
-    "@angular/forms": "^2.4.1",
-    "@angular/http": "^2.4.1",
-    "@angular/material": "^2.0.0-beta.1",
-    "@angular/platform-browser": "^2.4.1",
-    "@angular/platform-browser-dynamic": "^2.4.1",
-    "@angular/router": "^3.4.1",
-    "@types/hammerjs": "^2.0.34",
-    "core-js": "^2.4.1",
-    "hammerjs": "^2.0.8",
-    "json-typescript-mapper": "^1.0.5",
-    "ng2-translate": "^4.0.1",
+    "@angular/common": "2.4.1",
+    "@angular/compiler": "2.4.1",
+    "@angular/core": "2.4.1",
+    "@angular/flex-layout": "2.0.0-beta.4",
+    "@angular/forms": "2.4.1",
+    "@angular/http": "2.4.1",
+    "@angular/material": "2.0.0-beta.1",
+    "@angular/platform-browser": "2.4.1",
+    "@angular/platform-browser-dynamic": "2.4.1",
+    "@angular/router": "3.4.1",
+    "@types/hammerjs": "2.0.34",
+    "core-js": "2.4.1",
+    "hammerjs": "2.0.8",
+    "json-typescript-mapper": "1.0.5",
+    "ng2-translate": "4.0.1",
     "rxjs": "5.0.1",
-    "ts-helpers": "^1.1.2",
-    "zone.js": "^0.7.2"
+    "ts-helpers": "1.1.2",
+    "zone.js": "0.7.2"
   },
   "devDependencies": {
     "@angular/compiler-cli": "2.4.1",
     "@types/jasmine": "2.5.38",
-    "@types/node": "^6.0.42",
-    "angular-cli": "^1.0.0-beta.24",
+    "@types/node": "6.0.42",
+    "angular-cli": "1.0.0-beta.24",
     "codelyzer": "2.0.0-beta.4",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-cli": "1.0.1",
+    "karma-jasmine": "1.0.2",
+    "karma-remap-istanbul": "0.2.1",
     "protractor": "4.0.9",
-    "travis-encrypt": "^2.1.1",
+    "travis-encrypt": "2.1.1",
     "ts-node": "1.7.3",
     "tslint": "4.2.0",
-    "typescript": "~2.0.3",
+    "typescript": "2.0.3",
     "webdriver-manager": "10.2.5",
-    "webpack": "^2.2.1"
+    "webpack": "2.2.1"
   }
 }
