--- a/package.json
+++ b/package.json
@@ -33,22 +33,23 @@
     "zone.js": "0.7.2"
   },
   "devDependencies": {
+    "@angular/cli": "1.0.0-rc.2",
     "@angular/compiler-cli": "2.4.8",
     "@types/jasmine": "2.5.38",
     "@types/node": "6.0.42",
-    "angular-cli": "1.0.0-beta.24",
     "codelyzer": "2.0.0-beta.4",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
     "karma-chrome-launcher": "2.0.0",
     "karma-cli": "1.0.1",
+    "karma-coverage-istanbul-reporter": "0.3.0",
     "karma-jasmine": "1.0.2",
-    "karma-remap-istanbul": "0.2.1",
+    "karma-jasmine-html-reporter": "0.2.2",
     "protractor": "4.0.9",
     "travis-encrypt": "2.1.1",
-    "ts-node": "1.7.3",
-    "tslint": "4.2.0",
+    "ts-node": "2.0.0",
+    "tslint": "4.5.1",
     "typescript": "2.0.3",
     "webdriver-manager": "10.2.5",
     "webpack": "2.2.1"
