--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@angular/common": "2.4.10",
     "@angular/compiler": "2.4.10",
     "@angular/core": "2.4.10",
-    "@angular/flex-layout": "2.0.0-beta.4",
+    "@angular/flex-layout": "2.0.0-rc.1",
     "@angular/forms": "2.4.10",
     "@angular/http": "2.4.10",
     "@angular/material": "2.0.0-beta.2",
