--- a/package.json
+++ b/package.json
@@ -13,30 +13,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.4.10",
-    "@angular/compiler": "2.4.10",
-    "@angular/core": "2.4.10",
+    "@angular/animations": "4.0.0",
+    "@angular/common": "4.0.0",
+    "@angular/compiler": "4.0.0",
+    "@angular/core": "4.0.0",
+    "@angular/forms": "4.0.0",
+    "@angular/http": "4.0.0",
+    "@angular/platform-browser": "4.0.0",
+    "@angular/platform-browser-dynamic": "4.0.0",
+    "@angular/router": "4.0.0",
     "@angular/flex-layout": "2.0.0-rc.1",
-    "@angular/forms": "2.4.10",
-    "@angular/http": "2.4.10",
     "@angular/material": "2.0.0-beta.2",
-    "@angular/platform-browser": "2.4.10",
-    "@angular/platform-browser-dynamic": "2.4.10",
-    "@angular/router": "3.4.10",
     "@types/hammerjs": "2.0.34",
     "core-js": "2.4.1",
     "hammerjs": "2.0.8",
-    "ng2-translate": "4.0.1",
+    "ng2-translate": "5.0.0",
     "rxjs": "5.0.1",
     "ts-helpers": "1.1.2",
-    "zone.js": "0.7.2"
+    "zone.js": "0.8.4"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0",
-    "@angular/compiler-cli": "2.4.10",
+    "@angular/compiler-cli": "4.0.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "6.0.42",
-    "codelyzer": "2.0.0-beta.4",
+    "codelyzer": "3.0.0-beta.4",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
