--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "@angular/common": "4.0.0",
     "@angular/compiler": "4.0.0",
     "@angular/core": "4.0.0",
+    "@angular/flex-layout": "2.0.0-rc.1",
     "@angular/forms": "4.0.0",
     "@angular/http": "4.0.0",
+    "@angular/material": "2.0.0-beta.2",
     "@angular/platform-browser": "4.0.0",
     "@angular/platform-browser-dynamic": "4.0.0",
     "@angular/router": "4.0.0",
-    "@angular/flex-layout": "2.0.0-rc.1",
-    "@angular/material": "2.0.0-beta.2",
     "@types/hammerjs": "2.0.34",
+    "@types/three": "0.84.3",
     "core-js": "2.4.1",
     "hammerjs": "2.0.8",
     "ng2-translate": "5.0.0",
