--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "hammerjs": "2.0.8",
     "ng2-translate": "5.0.0",
     "rxjs": "5.0.1",
-    "three": "^0.84.0",
+    "three": "0.84.0",
     "ts-helpers": "1.1.2",
     "zone.js": "0.8.4"
   },
@@ -50,9 +50,9 @@
     "karma-jasmine-html-reporter": "0.2.2",
     "protractor": "4.0.9",
     "travis-encrypt": "2.1.1",
-    "ts-node": "2.0.0",
-    "tslint": "4.5.1",
-    "typescript": "2.2.1",
+    "ts-node": "3.0.2",
+    "tslint": "5.0.0",
+    "typescript": "2.2.2",
     "webdriver-manager": "10.2.5",
     "webpack": "2.3.2"
   }
