--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "e2e": "protractor",
     "build": "ng build --target production --base-href \"/GurpsyMcGurpsFace/\""
   },
+  "pre-push": [
+    "lint",
+    "test"
+  ],
   "private": true,
   "dependencies": {
     "@angular/animations": "4.0.0",
@@ -48,6 +52,7 @@
     "karma-coverage-istanbul-reporter": "0.3.0",
     "karma-jasmine": "1.0.2",
     "karma-jasmine-html-reporter": "0.2.2",
+    "pre-push": "^0.1.1",
     "protractor": "4.0.9",
     "travis-encrypt": "2.1.1",
     "ts-node": "2.0.0",
