--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/three": "0.84.3",
     "core-js": "2.4.1",
     "hammerjs": "2.0.8",
+    "ng2-pdf-viewer": "^1.0.2",
     "ng2-translate": "5.0.0",
     "rxjs": "5.0.1",
     "three": "0.84.0",
