--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@angular/compiler-cli": "4.1.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "7.0.12",
-    "codelyzer": "3.0.0-beta.4",
+    "codelyzer": "3.0.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
@@ -57,7 +57,7 @@
     "protractor": "4.0.9",
     "travis-encrypt": "2.1.1",
     "ts-node": "2.0.0",
-    "tslint": "5.1.0",
+    "tslint": "5.2.0",
     "typescript": "2.2.2",
     "webdriver-manager": "10.2.5",
     "webpack": "2.4.1"
