--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     "karma-coverage-istanbul-reporter": "0.3.0",
     "karma-jasmine": "1.0.2",
     "karma-jasmine-html-reporter": "0.2.2",
-    "pre-push": "^0.1.1",
+    "node-sass": "^4.5.2",
+    "pre-push": "0.1.1",
     "protractor": "4.0.9",
+    "sass-loader": "6.0.5",
     "travis-encrypt": "2.1.1",
     "ts-node": "2.0.0",
     "tslint": "5.2.0",
