--- a/package.json
+++ b/package.json
@@ -17,23 +17,24 @@
   ],
   "private": true,
   "dependencies": {
-    "@angular/animations": "4.1.0",
-    "@angular/common": "4.1.0",
-    "@angular/compiler": "4.1.0",
-    "@angular/core": "4.1.0",
+    "@angular/animations": "4.1.1",
+    "@angular/common": "4.1.1",
+    "@angular/compiler": "4.1.1",
+    "@angular/core": "4.1.1",
     "@angular/flex-layout": "2.0.0-beta.8",
-    "@angular/forms": "4.1.0",
-    "@angular/http": "4.1.0",
+    "@angular/forms": "4.1.1",
+    "@angular/http": "4.1.1",
     "@angular/material": "2.0.0-beta.2",
-    "@angular/platform-browser": "4.1.0",
-    "@angular/platform-browser-dynamic": "4.1.0",
-    "@angular/router": "4.1.0",
+    "@angular/platform-browser": "4.1.1",
+    "@angular/platform-browser-dynamic": "4.1.1",
+    "@angular/router": "4.1.1",
+    "@ngx-translate/core": "6.0.1",
+    "@ngx-translate/http-loader": "0.0.3",
     "@types/hammerjs": "2.0.34",
     "@types/three": "0.84.3",
     "core-js": "2.4.1",
     "hammerjs": "2.0.8",
-    "ng2-pdf-viewer": "^1.0.2",
-    "ng2-translate": "5.0.0",
+    "ng2-pdf-viewer": "1.0.2",
     "rxjs": "5.0.1",
     "three": "0.84.0",
     "ts-helpers": "1.1.2",
@@ -41,7 +42,7 @@
   },
   "devDependencies": {
     "@angular/cli": "1.0.1",
-    "@angular/compiler-cli": "4.1.0",
+    "@angular/compiler-cli": "4.1.1",
     "@types/jasmine": "2.5.38",
     "@types/node": "7.0.12",
     "codelyzer": "3.0.1",
@@ -53,7 +54,7 @@
     "karma-coverage-istanbul-reporter": "0.3.0",
     "karma-jasmine": "1.0.2",
     "karma-jasmine-html-reporter": "0.2.2",
-    "node-sass": "^4.5.2",
+    "node-sass": "4.5.2",
     "pre-push": "0.1.1",
     "protractor": "4.0.9",
     "sass-loader": "6.0.5",
