--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "zone.js": "0.8.10"
   },
   "devDependencies": {
-    "@angular/cli": "1.1",
+    "@angular/cli": "^1.1.0",
     "@angular/compiler-cli": "4.1.3",
     "@types/jasmine": "2.5.38",
     "@types/node": "7.0.12",
