Reworked the models and their json counterparts. Basic setup complete.

--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -2,6 +2,8 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/app",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "module": "es2015",
     "baseUrl": "",
     "types": []
