--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/three": "0.84.3",
     "core-js": "2.4.1",
     "hammerjs": "2.0.8",
+    "json2typescript": "^0.9.5",
     "ng2-pdf-viewer": "1.1.0",
     "rxjs": "5.4.0",
     "three": "0.84.0",
