--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
     "@angular/router": "4.1.3",
-    "@ngx-translate/core": "6.0.1",
-    "@ngx-translate/http-loader": "0.0.3",
+    "@ngx-translate/core": "7.0.0",
+    "@ngx-translate/http-loader": "0.1.0",
     "@types/hammerjs": "2.0.34",
     "@types/three": "0.84.3",
     "core-js": "2.4.1",
     "hammerjs": "2.0.8",
-    "json2typescript": "^0.9.5",
+    "json2typescript": "0.9.5",
     "ng2-pdf-viewer": "1.1.0",
     "rxjs": "5.4.0",
     "three": "0.84.0",
@@ -42,7 +42,7 @@
     "zone.js": "0.8.10"
   },
   "devDependencies": {
-    "@angular/cli": "^1.1.0",
+    "@angular/cli": "1.1.1",
     "@angular/compiler-cli": "4.1.3",
     "@types/jasmine": "2.5.38",
     "@types/node": "7.0.12",
@@ -61,8 +61,8 @@
     "sass-loader": "6.0.5",
     "travis-encrypt": "2.1.1",
     "ts-node": "2.0.0",
-    "tslint": "5.4.0",
-    "typescript": "2.3.3",
+    "tslint": "5.4.3",
+    "typescript": "2.3.4",
     "webdriver-manager": "10.2.5",
     "webpack": "2.4.1"
   }
