--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "core-js": "2.4.1",
     "hammerjs": "2.0.8",
     "json2typescript": "0.9.5",
-    "ng2-img-cropper": "^0.9.0",
+    "ng2-img-cropper": "0.9.0",
     "ng2-pdf-viewer": "1.1.0",
     "rxjs": "5.4.0",
     "three": "0.84.0",
