--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,11 @@ before_install:
 script:
   - ng -v
   - ng lint
-  - ng test --watch false
+  - npm run test-coverage
   - ng build --target production --base-href "/GurpsyMcGurpsFace/"
 
 after_success: |
+  npm run coveralls
   [ $TRAVIS_BRANCH = master ] &&
   bash deploy.sh
 
