--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "ng serve",
     "lint": "tslint \"src/**/*.ts\"",
-    "test": "ng test --watch false --code-coverage",
+    "test": "ng test",
+    "test-coverage": "ng test --watch false --code-coverage",
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
     "build": "ng build --target production --base-href \"/GurpsyMcGurpsFace/\""
