--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ngx-translate/http-loader": "0.1.0",
     "@types/hammerjs": "2.0.34",
     "@types/three": "0.84.3",
+    "angular2-uuid": "1.1.1",
     "core-js": "2.4.1",
     "hammerjs": "2.0.8",
     "json2typescript": "0.9.5",
