--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@types/jasmine": "2.5.53",
     "@types/node": "8.0.9",
     "codelyzer": "3.1.2",
-    "coveralls": "^2.13.1",
+    "coveralls": "2.13.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.7.0",
