--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@ngx-translate/core": "8.0.0",
     "@ngx-translate/http-loader": "2.0.0",
     "@types/hammerjs": "2.0.34",
-    "@types/three": "0.84.3",
     "angular2-uuid": "1.1.1",
     "core-js": "2.5.0",
     "hammerjs": "2.0.8",
@@ -42,8 +41,8 @@
     "ng2-img-cropper": "0.9.0",
     "ng2-pdf-viewer": "1.2.6",
     "rxjs": "5.4.3",
-    "three": "0.84.0",
     "ts-helpers": "1.1.2",
+    "whs": "2.1.8",
     "zone.js": "0.8.12"
   },
   "devDependencies": {
