--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ngx-translate/core": "8.0.0",
     "@ngx-translate/http-loader": "2.0.0",
     "@types/hammerjs": "2.0.34",
+    "@types/three": "^0.84.26",
     "angular2-uuid": "1.1.1",
     "core-js": "2.5.0",
     "hammerjs": "2.0.8",
@@ -41,6 +42,7 @@
     "ng2-img-cropper": "0.9.0",
     "ng2-pdf-viewer": "2.0.1",
     "rxjs": "5.4.3",
+    "three": "0.87.1",
     "ts-helpers": "1.1.2",
     "whs": "2.1.8",
     "zone.js": "0.8.12"
