--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@ngx-translate/core": "8.0.0",
     "@ngx-translate/http-loader": "2.0.0",
     "@types/hammerjs": "2.0.34",
-    "@types/three": "^0.84.26",
+    "@types/three": "0.84.26",
     "angular2-uuid": "1.1.1",
     "core-js": "2.5.0",
     "hammerjs": "2.0.8",
