--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@angular/core": "5.0.0",
     "@angular/flex-layout": "2.0.0-beta.10",
     "@angular/forms": "5.0.0",
-    "@angular/common/http": "5.0.0",
+    "@angular/http": "5.0.0",
     "@angular/material": "2.0.0-beta.12",
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
