--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "5.0.2",
-    "@angular/cdk": "5.0.0-rc1",
+    "@angular/cdk": "5.0.0-rc.1",
     "@angular/common": "5.0.2",
     "@angular/compiler": "5.0.2",
     "@angular/core": "5.0.2",
-    "@angular/flex-layout": "2.0.0-beta.11",
+    "@angular/flex-layout": "2.0.0-beta.10",
     "@angular/forms": "5.0.2",
     "@angular/http": "5.0.2",
-    "@angular/material": "5.0.0-rc1",
+    "@angular/material": "5.0.0-rc.1",
     "@angular/platform-browser": "5.0.2",
     "@angular/platform-browser-dynamic": "5.0.2",
     "@angular/router": "5.0.2",
@@ -48,7 +48,7 @@
     "zone.js": "0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.3",
+    "@angular/cli": "1.5.4",
     "@angular/compiler-cli": "5.0.2",
     "@types/jasmine": "2.6.2",
     "@types/node": "8.0.47",
