--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,15 @@ dist: sugilite
 node_js:
   - '7.0'
 
+env:
+  - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
+
 branches:
   only:
   - master
