--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: true
 dist: sugilite
 
 node_js:
-  - '7.0'
+  - '7'
 
 env:
   - CXX=g++-4.8
@@ -13,6 +13,7 @@ addons:
       - ubuntu-toolchain-r-test
     packages:
       - g++-4.8
+  chrome: stable
 
 branches:
   only:
@@ -22,9 +23,9 @@ before_install:
  - export CHROME_BIN=/usr/bin/google-chrome
  - export DISPLAY=:99.0
  - sh -e /etc/init.d/xvfb start
- - sudo apt-get install -y libappindicator1 fonts-liberation
- - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
- - sudo dpkg -i google-chrome*.deb
+# - sudo apt-get install -y libappindicator1 fonts-liberation
+# - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+# - sudo dpkg -i google-chrome*.deb
 
 script:
   - ng -v
