--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 sudo: true
-dist: sugilite
+dist: trusty
 
 node_js:
   - '7'
@@ -10,17 +10,16 @@ env:
 addons:
   apt:
     sources:
-      - ubuntu-toolchain-r-test
+      - google-chrome
     packages:
-      - g++-4.8
-  chrome: stable
+      - google-chrome-stable
 
 branches:
   only:
   - master
 
 before_install:
- - export CHROME_BIN=/usr/bin/google-chrome
+# - export CHROME_BIN=/usr/bin/google-chrome
  - export DISPLAY=:99.0
  - sh -e /etc/init.d/xvfb start
 # - sudo apt-get install -y libappindicator1 fonts-liberation
