--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
-sudo: true
-dist: trusty
+sudo: required
+group: travis_lts
 
 node_js:
   - '7'
@@ -19,12 +19,8 @@ branches:
   - master
 
 before_install:
-# - export CHROME_BIN=/usr/bin/google-chrome
  - export DISPLAY=:99.0
  - sh -e /etc/init.d/xvfb start
-# - sudo apt-get install -y libappindicator1 fonts-liberation
-# - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-# - sudo dpkg -i google-chrome*.deb
 
 script:
   - ng -v
