--- a/package.json
+++ b/package.json
@@ -38,12 +38,11 @@
     "core-js": "2.5.0",
     "hammerjs": "2.0.8",
     "json2typescript": "1.0.5",
-    "ng2-img-cropper": "0.9.0",
-    "ng2-pdf-viewer": "3.0.2",
+    "ngx-img-cropper": "0.9.2",
+    "ng2-pdf-viewer": "4.0.0",
     "rxjs": "5.5.6",
-    "three": "0.87.1",
     "ts-helpers": "1.1.2",
-    "whs": "2.1.8",
+    "babylonjs": "3.2.0-alpha7",
     "zone.js": "0.8.20"
   },
   "devDependencies": {
