--- a/package.json
+++ b/package.json
@@ -35,14 +35,15 @@
     "@types/hammerjs": "2.0.35",
     "@types/three": "0.84.26",
     "angular2-uuid": "1.1.1",
+    "babylonjs": "3.2.0-alpha7",
+    "babylonjs-loaders": "^3.2.0-alpha7",
     "core-js": "2.5.0",
     "hammerjs": "2.0.8",
     "json2typescript": "1.0.5",
-    "ngx-img-cropper": "0.9.2",
     "ng2-pdf-viewer": "4.0.0",
+    "ngx-img-cropper": "0.9.2",
     "rxjs": "5.5.6",
     "ts-helpers": "1.1.2",
-    "babylonjs": "3.2.0-alpha7",
     "zone.js": "0.8.20"
   },
   "devDependencies": {
