--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
-    "build": "ng build --target production --base-href \"/GurpsyMcGurpsFace/\""
+    "build": "ng build --target production --build-optimizer=false --base-href \"/GurpsyMcGurpsFace/\""
   },
   "pre-push": [
     "lint",
@@ -19,17 +19,17 @@
   ],
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.2.3",
+    "@angular/animations": "5.2.4",
     "@angular/cdk": "5.2.0",
-    "@angular/common": "5.2.3",
-    "@angular/compiler": "5.2.3",
-    "@angular/core": "5.2.3",
+    "@angular/common": "5.2.4",
+    "@angular/compiler": "5.2.4",
+    "@angular/core": "5.2.4",
     "@angular/flex-layout": "2.0.0-beta.12",
-    "@angular/forms": "5.2.3",
-    "@angular/http": "5.2.3",
+    "@angular/forms": "5.2.4",
+    "@angular/http": "5.2.4",
     "@angular/material": "5.2.0",
-    "@angular/platform-browser": "5.2.3",
-    "@angular/platform-browser-dynamic": "5.2.3",
+    "@angular/platform-browser": "5.2.4",
+    "@angular/platform-browser-dynamic": "5.2.4",
     "@ngx-translate/core": "9.0.2",
     "@ngx-translate/http-loader": "2.0.1",
     "@types/hammerjs": "2.0.35",
@@ -41,14 +41,14 @@
     "hammerjs": "2.0.8",
     "json2typescript": "1.0.5",
     "ng2-pdf-viewer": "4.0.0",
-    "ngx-img-cropper": "0.9.3",
+    "ng2-img-cropper": "0.9.0",
     "rxjs": "5.5.6",
     "ts-helpers": "1.1.2",
     "zone.js": "0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.7",
-    "@angular/compiler-cli": "5.2.3",
+    "@angular/cli": "1.6.8",
+    "@angular/compiler-cli": "5.2.4",
     "@types/jasmine": "2.6.2",
     "@types/node": "8.0.47",
     "codelyzer": "4.0.2",
@@ -68,7 +68,7 @@
     "travis-encrypt": "2.1.1",
     "ts-node": "3.3.0",
     "tslint": "5.9.1",
-    "typescript": "2.5.3",
+    "typescript": "2.7",
     "webdriver-manager": "12.0.6",
     "webpack": "3.5.5"
   }
