--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,10 @@ addons:
     packages:
       - google-chrome-stable
 
+cache:
+  directories:
+    - "node_modules"
+
 branches:
   only:
   - master
