--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/material": "5.2.3",
     "@angular/platform-browser": "5.2.7",
     "@angular/platform-browser-dynamic": "5.2.7",
+    "@angular/router" : "5.2.7",
     "@ngx-translate/core": "9.0.2",
     "@ngx-translate/http-loader": "2.0.1",
     "@types/hammerjs": "2.0.35",
