--- a/package.json
+++ b/package.json
@@ -36,13 +36,12 @@
     "@types/hammerjs": "2.0.35",
     "@types/three": "0.84.26",
     "angular2-uuid": "1.1.1",
-    "babylonjs": "3.2.0-alpha10",
-    "babylonjs-loaders": "^3.2.0-alpha10",
+    "babylonjs": "3.2.0-alphaB",
     "core-js": "2.5.0",
     "hammerjs": "2.0.8",
     "json2typescript": "1.0.5",
     "ng2-pdf-viewer": "4.0.0",
-    "ng2-img-cropper": "0.9.0",
+    "ngx-img-cropper": "0.9.7",
     "rxjs": "5.5.6",
     "ts-helpers": "1.1.2",
     "zone.js": "0.8.20"
